--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     margin: 0;
-    background: url("../intro_01.jpg");
+    background: url("https/itsaisanad.github.io/intro_01.jpg");
     background-size: cover;
 }
 
